--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         ]
     },
     "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "autoprefixer": "^10.4.16",
         "eslint": "^8.34.0",
         "eslint-config-react-app": "^7.0.1",
